<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Azazai</string>
    <string name="name">Name</string>
    <string name="event_name_hint">Enter event name</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="event_description_hint">Enter event description</string>
    <string name="event_address_hint">Enter event address</string>
    <string name="number_of_people">Number of people</string>
    <string name="people_number_dialog_title">Select people number</string>
    <string name="date_filter">Filter by Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="events">Events</string>
    <string name="create">Create</string>
    <string name="event_created">New event created</string>
    <string name="vk_login_error">You must accept the Events App in Vk to use the Application!</string>
    <string name="please_wait">Please wait…</string>
    <string name="my_events">My Events</string>
    <string name="tags">Tags</string>
    <string name="subscribed">Subscribed</string>
    <string name="created">Created</string>
    <string name="event_date_title">Event date:</string>
    <string name="event_date">Event date</string>
    <string name="i_will_go">I Will Go</string>
    <string name="i_will_not_go">I Will Not Go</string>
    <string name="subscribe_message">You have subscribed for the event</string>
    <string name="cancel_event">Cancel Event</string>
    <string name="cancel_event_confirm_message">Do you really want to cancel the event? It will delete event\'s data.
    </string>
    <string name="event_canceled">Event canceled</string>
    <string name="add_comment">Add Comment</string>
    <string name="view_all_comments">View All Comments</string>
    <string name="add_comment_hint">Add a comment</string>
    <string name="no_comments">There is comments yet. Be first!</string>
    <string name="no_comments_short">No comments yet. Be first!</string>
    <string name="comments">Comments</string>
    <string name="event">Event</string>
    <string name="participants">Participants</string>
    <string name="timeout_text">The event is not up to date</string>
    <string name="orginizer">Organizer</string>
    <string name="add_tag">Add a tag</string>
    <string name="empty_event_field" formatted="false">The event %s should not be empty</string>
    <string name="small_event_field" formatted="false">The event %s should contain at least %d characters</string>
    <string name="invalid_date">The event date should be bigger than the current date</string>
    <string name="enter_comment_message">Enter comment message</string>
    <string name="enter_tag_name">Enter tag name</string>
    <string name="log_out">Log out</string>
    <string name="create_event_back_confirm">Are you sure you want to cancel the event creation?</string>
    <string name="tag_already_added">Tag %s is already selected</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="cancel_event_notification" formatted="false">canceled event %s</string>
    <string name="event_canceled_page_text">The event is canceled</string>
    <string name="subscribe_event_notification" formatted="false">subscribed for event %s</string>
    <string name="vk_login_button">LOGIN WITH VK</string>
    <string name="welcome">Welcome to Azazai!</string>
    <string name="retry">Retry</string>
    <string name="edit">Edit</string>
    <string name="event_creation_title">Create New Event</string>
    <string name="event_edit_title">Edit Event %s</string>
    <string name="disable_internet_connection">Disable internet connection</string>
    <string name="enable_internet_connection">Enable internet connection</string>
    <string name="no_events_found">No events found</string>
    <string name="no_subscribed_events">No subscribed events</string>
    <string name="create_new_event">Create new event</string>
    <string name="find_events">Find events</string>
    <string name="create_first_event">Create first event</string>
    <string name="no_events_on">No events on</string>
    <string name="no_tags_found">No tags found</string>
    <string name="read_storage_permission">Grunt read storage permission to access settings</string>
    <string name="requests">Requests</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="request_message" formatted="false">
        <![CDATA[<b>%s</b> wants to participate in <b>%s</b>]]></string>
    <string name="no_requests">No requests</string>
    <string name="create_private_event">Create private event</string>
    <string name="request_decline_confirm">Decline the request?</string>
    <string name="declining_request_failed">Declining request failed</string>
    <string name="accept_request_failed">Accepting request failed</string>
    <string name="private_event">Private event</string>
    <string name="past_events">Past Events</string>
    <string name="icons_fragment_title">Select Event Avatar</string>
    <string name="select_event_avatar">Tap here to select Event Avatar</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="delete_comment">Delete Comment</string>
</resources>
