<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:id="@+id/select_event_avatar"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon"
                    android:src="@drawable/event_icon"
                    android:layout_width="65dp"
                    android:layout_height="65dp"/>

                <TextView
                    android:text="@string/select_event_avatar"
                    style="@style/header2"
                    android:paddingLeft="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    style="@style/createEventLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/name"/>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:hint="@string/event_name_hint"
                    android:maxLength="50"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textSize="15sp"/>

                <TextView
                    style="@style/createEventLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/description"/>

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:hint="@string/event_description_hint"
                    android:inputType="textMultiLine"
                    android:maxLength="500"
                    android:maxLines="10"
                    android:minLines="2"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="16sp"/>

                <TextView
                    style="@style/createEventLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/address"/>

                <com.utilsframework.android.view.EditTextWithSuggestions
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:hint="@string/event_address_hint"
                    android:inputType="textMultiLine"
                    android:maxLength="200"
                    android:maxLines="3"
                    android:minLines="2"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="16sp"/>

                <TextView
                    style="@style/createEventLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/event_date"/>

                <com.utilsframework.android.view.DateTimePickerButton
                    android:id="@+id/date_and_time"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"/>

                <View
                    android:id="@+id/second_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#894597a2"/>

                <LinearLayout
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:gravity="center"
                            >

                            <TextView
                                android:id="@+id/people_number_label"
                                style="@style/header2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/number_of_people"/>

                            <com.utilsframework.android.view.NumberPickerButton
                                android:id="@+id/people_number"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_margin="5dp"
                                android:background="@drawable/people_number_picker"
                                android:gravity="center"
                                android:textColor="@color/vk_white"/>
                        </LinearLayout>

                    </FrameLayout>

                    <CheckBox
                        android:id="@+id/share_with_friends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/share_with_friends"
                        android:textColor="@color/header"/>

                    <CheckBox
                        android:id="@+id/private_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/private_event"
                        android:textColor="@color/header"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <com.utilsframework.android.view.EditTextWithSuggestions
                            android:id="@+id/add_tag_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/add_tag"
                            android:textSize="16sp"/>

                        <ImageButton
                            android:id="@+id/add_tag_button"
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/add_icon"/>
                    </LinearLayout>

                    <com.utilsframework.android.view.flowlayout.FlowLayout
                        android:id="@+id/tags"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</LinearLayout>

